<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controllers.activities.MainActivity" >
    <item
        android:id="@+id/action_notification"
        android:title="@string/action_notifications"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never" />
    <item
            android:id="@+id/action_about"
            android:title="@string/action_about"
            app:showAsAction="never" />
    <item
            android:id="@+id/action_search"
            android:title="@string/action_search"
            android:icon="@drawable/ic_search"
            app:showAsAction="ifRoom" />
</menu>