<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.MainActivity">

    <LinearLayout
        android:id="@+id/layout_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_search_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_query_term"
            android:layout_margin="8dp" />

        <LinearLayout
            android:id="@+id/calendars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/beginDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/beginDate"
                android:layout_margin="8dp" />

            <EditText
                android:id="@+id/endDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/endDate"
                android:layout_margin="8dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkboxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/first_checkboxes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkbox_arts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/checkbox_arts"/>
                <CheckBox
                    android:id="@+id/checkbox_business"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/checkbox_business"/>
                <CheckBox
                    android:id="@+id/checkbox_entrepreneurs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/checkbox_entrepreneurs"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/second_checkboxes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkbox_politics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/checkbox_politics"/>
                <CheckBox
                    android:id="@+id/checkbox_sports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/checkbox_sports"/>
                <CheckBox
                    android:id="@+id/checkbox_travel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/checkbox_travel"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/button_search"
            android:background="@color/colorPrimary"
            android:textColor="@color/text_color"/>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>